add change resolution button and reset button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="buttons_wrapper">
+        <button onclick="changeResolution()" id="set_resolution">Set pixels by side</button>
+        <button onclick="erase()" id="reset">Reset</button>
+    </div>
     <div class="container"></div>
    <script src="main.js"></script> 
 </body>
