add radiobuttons to select mode

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <label for="monochrome">Monochrome</label>
         </div>
         <div>
-            <input type="radio" class="draw_type" name="draw_type" id="random"  value="random" checked />
+            <input type="radio" class="draw_type" name="draw_type" id="random"  value="random"/>
             <label for="random">Random</label>
         </div>
         <div>
-            <input type="radio" class="draw_type" name="draw_type" id="fading"  value="fading" checked />
+            <input type="radio" class="draw_type" name="draw_type" id="fading"  value="fading"/>
             <label for="fading">Fading</label>
         </div>
     </div>
